[tool.poetry]
name = "proxyverse"
version = "0.1.0"
description = ""
authors = ["alexkorolex@bk.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
setuptools = "^72.1.0"
twine = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
